--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="intro-section">
         <h2>Hi Thanks for stopping by, thats so sweet of you.</h2>
         <p>
-          Welcome to my DailyUI Challenge project. here you can find all 100 designs I have put together through my journey. hope you have goof time here.
+          Welcome to my DailyUI Challenge project. here you can find all 100 designs I have put together through my journey. hope you have good time here.
         </p>
       </div>
     </div>
