--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         About
       </button>
       <div class="intro-section">
-        <h2>Hi Thanks for stopping by, thats so sweet of you.</h2>
+        <h2 class="separator">Hi Thanks for stopping by, thats so sweet of you.</h2>
         <p>
           Welcome to my DailyUI Challenge project. here you can find all 100 designs I have put together through my journey. hope you have good time here.
         </p>
@@ -39,7 +39,31 @@
       </div>
     </div>
 
+    <div class="social text-center">
+      <p class="separator">Get in touch.</p>
+      <a href="https://twitter.com/ppramodrh" class="twitter" target="_blank">twitter</a>
+      <a href="https://in.linkedin.com/in/pramod-hegde-b2b48054" class="linkedin" target="_blank">linkedin</a>
+      <a href="https://www.behance.net/pramodrhegde" class="behance" target="_blank">behance</a>
+      <a href="https://dribbble.com/pramodrhegde" class="dribble" target="_blank">dribble</a>
+      <a href="https://www.facebook.com/ppramodrh" class="facebook" target="_blank">facebook</a>
+    </div>
+
+    <div class="loader text-center">
+      <div class="one circle"></div>
+      <div class="two circle"></div>
+      <div class="three circle"></div>
+    </div>
   </div>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-88047678-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
   <script src="./vendors/jquery/dist/jquery.min.js"></script>
   <script src="./vendors/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="./vendors/handlebars/handlebars.min.js"></script>
