--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       </button>
       <div class="intro-section">
         <p>Hi this is me!</p>
-        <img src="images/avatar.JPG" alt="profile image - pramod" class="avatar img-responsive">
+        <img src="https://res.cloudinary.com/prazor9/image/upload/v1480185529/_DSC0114_usbpr7.jpg" alt="profile image - pramod" class="avatar img-responsive">
         <h2 class="separator">I am a UI Designer/Developer from Bengaluru, India.</h2>
         <p class="about-description">
           Well to talk about this project first of all I will thank <a href="http://www.dailyui.co/" target="_blank">dailyui.co</a> for helping me to pursue this challenge and complete it successfully.
