analytics events added

--- a/about.html
+++ b/about.html
@@ -25,16 +25,16 @@
         <p class="about-description">
           Well to talk about this project first of all I will thank <a href="http://www.dailyui.co/" target="_blank">dailyui.co</a> for helping me to pursue this challenge and complete it successfully.
           I started this project on <b> 15th June 2016 </b> and finished it by <b> 5th November 2016. </b> you can follow my works here in
-          <a href="https://twitter.com/ppramodrh/status/743571708095782912" target="_blank">twitter</a> day by day. finally I will thank my friends who were been great critiques and helping
+          <b><a href="https://twitter.com/ppramodrh/status/743571708095782912" target="_blank"> twitter </a></b> day by day. finally I will thank my friends who were been great critiques and helping
           me improve my works through out the journey.
         </p>
         <div class="social">
           <p class="separator">you can find me in these</p>
-          <a href="https://twitter.com/ppramodrh" class="twitter" target="_blank">twitter</a>
-          <a href="https://in.linkedin.com/in/pramod-hegde-b2b48054" class="linkedin" target="_blank">linkedin</a>
-          <a href="https://www.behance.net/pramodrhegde" class="behance" target="_blank">behance</a>
-          <a href="https://dribbble.com/pramodrhegde" class="dribble" target="_blank">dribble</a>
-          <a href="https://www.facebook.com/ppramodrh" class="facebook" target="_blank">facebook</a>
+          <a href="https://twitter.com/ppramodrh" data-type="twitter" class="twitter" target="_blank">twitter</a>
+          <a href="https://in.linkedin.com/in/pramod-hegde-b2b48054" data-type="linkedin" class="linkedin" target="_blank">linkedin</a>
+          <a href="https://www.behance.net/pramodrhegde" data-type="behance" class="behance" target="_blank">behance</a>
+          <a href="https://dribbble.com/pramodrhegde" data-type="dribble" class="dribble" target="_blank">dribble</a>
+          <a href="https://www.facebook.com/ppramodrh" data-type="facebook" class="facebook" target="_blank">facebook</a>
         </div>
       </div>
     </div>
@@ -52,12 +52,10 @@
   </script>
   <script src="./vendors/jquery/dist/jquery.min.js"></script>
   <script src="./vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="./dist/js/main.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
-      //about click
-      $('#home').on('click', function() {
-        window.location.href="/"
-      });
+      initRabbit();
     });
   </script>
 </body>
