info text added

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
       <div class="intro-section">
         <h2 class="separator">Hi Thanks for stopping by, thats so sweet of you.</h2>
         <p>
-          Welcome to my DailyUI Challenge project. here you can find all 100 designs I have put together through my journey. hope you have good time here.
+          Welcome to my DailyUI Challenge project. here you can find all 100 designs I have put together through my journey. hope you will have a good time here.
         </p>
       </div>
+    </div>
+
+    <div class="text-center">
+      <p class="info-text">Click on images for full and better preview.</p>
     </div>
 
     <div class="card-container">
