--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
         <img src="https://res.cloudinary.com/prazor9/image/upload/v1480185529/_DSC0114_usbpr7.jpg" alt="profile image - pramod" class="avatar img-responsive">
         <h2 class="separator">I am a UI Designer/Developer from Bengaluru, India.</h2>
         <p class="about-description">
-          Well to talk about this project first of all I will thank <a href="http://www.dailyui.co/" target="_blank">dailyui.co</a> for helping me to pursue this challenge and complete it successfully.
-          I started this project on <b> 15th June 2016 </b> and finished it by <b> 5th November 2016. </b> you can follow my works here in
-          <b><a href="https://twitter.com/ppramodrh/status/743571708095782912" target="_blank"> twitter </a></b> day by day. finally I will thank my friends who were been great critiques and helping
-          me improve my works through out the journey.
+          To talk about this project firstly I would like to thank <a href="http://www.dailyui.co/" target="_blank">dailyui.co</a> for helping me pursue this challenge and complete it successfully.
+          I worked on this project from <b> 15th June 2016 </b> to <b> 5th November 2016. </b> You can follow my works here in
+          <b><a href="https://twitter.com/ppramodrh/status/743571708095782912" target="_blank"> twitter </a></b> day by day. finally I would like to thank my friends who have been great critiques thereby helping
+          me improve my work throughout this wonderful journey.
         </p>
         <div class="social">
           <p class="separator">you can find me in these</p>
